[project]
name = "lxmfcot"
version = "0.1.0"
description = "TAK/CoT bridge for the LXDR protocol."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
  { name = "ealvar3z" }
]
dependencies = [
  "pytak @ git+https://github.com/snstac/pytak.git@fa875a181bd724a7a841be2384677fc363ebbac5",
]

[project.scripts]
lxmfcot = "lxmfcot.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true
